--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Financial Kinetics Uncorporated</h2>
-          <p class="animate__animated animate__fadeInUp">Here we will teach you how to become financially kinetic and uncorporated.  Participate in and profit from the billions of dollars that exchanges hands daily through internet services. </p>
+          <p class="animate__animated animate__fadeInUp">Here we will teach you how to become financially kinetic and uncorporated.  Participate in and profit from the billions of dollars that exchanges hands daily through internet services. <br><br> We threw up this site 10/11/2020, kind of jumping off the cliff and flying with this thing. We will be rapidly adding content, so hang tight! </p>
+         
+          
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
