--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
 
-          <li class="drop-down"><a href="">Business Software</a>
+          <li class="drop-down"><a href="">Online Business Software</a>
         <!--    <ul>
-              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="#">CRM Software</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -78,28 +78,29 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Email Marketing Software</a></li>
+              <li><a href="#">Ecommerce Platforms</a></li>
+              <li><a href="#">Landing Page Builders</a></li>
+                <li><a href="#">Landing Page Builders</a></li>
             </ul>  -->
           </li>
 
           <li class="drop-down"><a href="">Make Money Online</a>
             <ul>
-              <!--   <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
+            <li><a href="#">Make Money Blogging</a></li>
+              <li class="drop-down"><a href="#">Make Money on Social Media</a>
              <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="#">Instagram</a></li>
+                  <li><a href="#">Pintrest</a></li>
+                  <li><a href="#">Twitter</a></li>
+                  <li><a href="#">Facebook</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Make Money on Youtube</a></li>
+              <li><a href="#">How to Start Online Business</a></li>
+              <li><a href="#">How to Start Dropshipping</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul> -->
+            </ul>
           </li>
 
           <ul>
@@ -133,9 +134,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Financial Kinetics Uncorporated</h2>
-          <p class="animate__animated animate__fadeInUp">Here we will teach you how to become financially kinetic and uncorporated.  Participate in and profit from the billions of dollars that exchanges hands daily through internet services. <br><br> We threw up this site 10/11/2020, kind of jumping off the cliff and flying with this thing. We will be rapidly adding content, so hang tight! </p>
-         
-          
+                  <p class="animate__animated animate__fadeInUp">Here we will teach you how to become financially kinetic and uncorporated.  Participate in and profit from the billions of dollars that exchanges hands daily through internet services. <br><br> We threw up this site 10/11/2020, kind of jumping off the cliff and flying with this thing. We will be rapidly adding content, so hang tight! </p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
@@ -192,18 +191,19 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>We're just a group of cyber wizards here to show you the methodologies on extracting value from the internet.</p>
+          <p>We're just a group of cyber wizards here to show you the methodologies of extracting value from the internet.</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
             <p>
+              It's 2020. Making money on the internet is no secret. There are formulas out there that work, and if you have the willingness to navigate the complexities and simplicities of the internet - then you too can make a living.
             </p>
 
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-
+              If you would like to follow our lead, then we can show you a few paths on generating passive revenue streams, as well as starting business online and expanding your technical and marketing skillsets.
             </p>
             <a href="#" class="btn-learn-more">Get Started</a>
           </div>
