--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Ecommerce</a></h4>
-              <p class="description"></p>
+              <p class="description">Learn how to create a brand and launch a product on an ecommerce website</p>
             </div>
           </div>
 
@@ -160,7 +160,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4 class="title"><a href="">Drop Shipping</a></h4>
-                  <p class="description"></p>
+                  <p class="description">Sell products from inventory that's not in your physical posession</p>
                   </div>
           </div>
 
@@ -168,7 +168,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Affiliate Marketing</a></h4>
-                <p class="description"></p>
+                <p class="description">Earn commission from referring sales to internet services and products</p>
               </div>
           </div>
 
@@ -176,7 +176,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
               <h4 class="title"><a href="">Crypto Currency</a></h4>
-                  <p class="description"></p>
+                  <p class="description">Participate in the new paradigm of programmable money. Welcome to the (r)evolution_</p>
                 </div>
           </div>
 
