--- a/index.html
+++ b/index.html
@@ -59,16 +59,61 @@
 
       <h1 class="logo mr-auto"><a href="#header" class="scrollto">FKU PayMe</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="#header" class="logo mr-auto scrollto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html#header" class="logo mr-auto scrollto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
+        <nav class="nav-menu d-none d-lg-block">
+          <ul>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html#about">About</a></li>
 
-          <li class="drop-down"><a href="">Online Business Software</a>
-        <!--    <ul>
-              <li><a href="#">CRM Software</a></li>
+
+
+
+            <li class="drop-down"><a href="">Make Money Online</a>
+              <ul>
+              <li><a href="blogging.html">Make Money Blogging</a></li>
+                <li><a href="socialmedia.html">Make Money on Social Media</a></li>
+          <!--      <li class="drop-down"><a href="#">Make Money on Social Media</a>
+               <ul>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Pintrest</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                  </ul>
+                </li> -->
+                <li><a href="youtube.html">Make Money on Youtube</a></li>
+                <li><a href="onlinebusiness.html">How to Start Online Business</a></li>
+                <li><a href="dropshipping.html">How to Start Dropshipping</a></li>
+              </ul>
+            </li>
+
+            <li class="drop-down"><a href="">Online Business Tools</a>
+             <ul>
+                <li><a href="crm.html">CRM Software</a></li>
+                <li><a href="emailmarketing.html">Email Marketing Software</a></li>
+                <li><a href="ecommerceplatforms.html">Ecommerce Platforms</a></li>
+                <li><a href="landingpage.html">Landing Page Builders</a></li>
+
+                <li><a href="courseplatforms.html">Online Course Platforms</a></li>
+                <li><a href="photoediting.html">Photo Editing Software</a></li>
+                <li><a href="podcasthosting.html">Podcast Hosting</a></li>
+                <li><a href="projectmanagement.html">Project Management Software</a></li>
+
+                <li><a href="scheduling.html">Scheduling Software</a></li>
+                <li><a href="seotools.html">SEO Tools</a></li>
+                <li><a href="socialtools.html">Social Media Tools</a></li>
+                <li><a href="videoediting.html">Video Editing Software</a></li>
+
+                <li><a href="vpn.html">VPN Services</a></li>
+                <li><a href="hosting.html">Web Hosting Services</a></li>
+                <li><a href="webinar.html">Webinar Software</a></li>
+                <li><a href="websitebuilders.html">Website Builders</a></li>
+
+                </ul>
+            </li>
+
+              <!--<li><a href="#">Resources</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -78,53 +123,19 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
-              <li><a href="#">Email Marketing Software</a></li>
-              <li><a href="#">Ecommerce Platforms</a></li>
-              <li><a href="#">Landing Page Builders</a></li>
-                <li><a href="#">Landing Page Builders</a></li>
-            </ul>  -->
-          </li>
-
-          <li class="drop-down"><a href="">Make Money Online</a>
-            <ul>
-            <li><a href="#">Make Money Blogging</a></li>
-              <li class="drop-down"><a href="#">Make Money on Social Media</a>
-             <ul>
-                  <li><a href="#">Instagram</a></li>
-                  <li><a href="#">Pintrest</a></li>
-                  <li><a href="#">Twitter</a></li>
-                  <li><a href="#">Facebook</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Make Money on Youtube</a></li>
-              <li><a href="#">How to Start Online Business</a></li>
-              <li><a href="#">How to Start Dropshipping</a></li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-            </ul>
+            </ul> -->
           </li>
-
-          <ul>
-            <li><a href="#">Resources</a></li>
-            <!--<li class="drop-down"><a href="#">Deep Drop Down</a>
-              <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Drop Down 2</a></li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
-          </ul> -->
-        </li>
-
         </ul>
-      </nav><!-- .nav-menu -->
+        </nav><!-- .nav-menu -->
 
-    </div>
-  </header><!-- End Header -->
+      </div>
+    </header><!-- End Header -->
+
+    <main id="main">
+    <main id="main">
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-cntent-center align-items-center">
