--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
                   </ul>
                 </li> -->
                 <li><a href="youtube.html">Make Money on Youtube</a></li>
-                <li><a href="onlinebusiness.html">How to Start Online Business</a></li>
-                <li><a href="dropshipping.html">How to Start Dropshipping</a></li>
+                <li><a href="ecommerce.html">Guide to Ecommerce</a></li>
+                <li><a href="dropshipping.html">Guide to Dropshipping</a></li>
+
+                <li><a href="affiliate.html">Guide to Affiliate Marketing</a></li>
+
+                <li><a href="cryptocurrency.html">Guide to cryptocurrency</a></li>
               </ul>
             </li>
 
