--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <nav class="nav-menu d-none d-lg-block">
         <nav class="nav-menu d-none d-lg-block">
           <ul>
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="index.html#about">About</a></li>
+            <li class="active"><a href="#hero">Home</a></li>
+            <li><a href="#about">About</a></li>
 
 
 
@@ -226,6 +226,78 @@
 
       </div>
     </section><!-- End About Us Section -->
+
+
+
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Learn How To Make Money Online</h2>
+          <p>With these step by step guides, you will learn the processes to make money online through ecommerce, dropshipping, affiliates, and cryptocurrencies. </p>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box">
+              <i class="icofont-computer"></i>
+              <h4><a href="ecommerce.html">Guide to Ecommerce</a></h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box">
+              <i class="icofont-chart-bar-graph"></i>
+              <h4><a href="dropshipping.html">Guide to Drop Shipping</a></h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon-box">
+              <i class="icofont-image"></i>
+              <h4><a href="affiliates.html">Guide to Affiliate Marketing</a></h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box">
+              <i class="icofont-settings"></i>
+              <h4><a href="cryptocurrency.html">Guide to CryptoCurrency</a></h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon-box">
+              <i class="icofont-earth"></i>
+              <h4><a href="blogging.html">Make Money with Blogging</a></h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
+            <div class="icon-box">
+              <i class="icofont-tasks-alt"></i>
+              <h4><a href="socialmedia.html">Make Money with Social Media </a></h4>
+              <p></p>
+            </div>
+          </div>
+
+
+
+        <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
+          <div class="icon-box">
+            <i class="icofont-tasks-alt"></i>
+            <h4><a href="youtube.html">Make Money with Youtube </a></h4>
+            <p></p>
+          </div>
+        </div>
+        </div>
+
+
+      </div>
+    </section><!-- End Services Section -->
+
+
 
   </main><!-- End #main -->
 
