--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <div class="container d-flex align-items-center">
       <div class="contact-info mr-auto">
         <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:contact@example.com">hello@fkupayme</a></li>
+          <li><i class="icofont-envelope"></i><a href="mailto:hello@fkupayme">hello@fkupayme</a></li>
         </ul>
       </div>
       <div class="cta">
-        <a href="#about" class="scrollto">Get Started</a>
+        <a href="#services" class="scrollto">Get Started</a>
       </div>
     </div>
   </div>
@@ -61,11 +61,11 @@
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html#header" class="logo mr-auto scrollto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="nav-menu d-none d-lg-block">
+
         <nav class="nav-menu d-none d-lg-block">
           <ul>
             <li class="active"><a href="#hero">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#about" class="scrollto">About</a></li>
 
 
 
@@ -138,8 +138,8 @@
       </div>
     </header><!-- End Header -->
 
-    <main id="main">
-    <main id="main">
+
+
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-cntent-center align-items-center">
@@ -164,35 +164,35 @@
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
-            <div class="icon-box">
+            <a href="ecommerce.html"><div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Ecommerce</a></h4>
+              <h4 class="title">Ecommerce</h4>
               <p class="description">Learn how to create a brand and launch a product on an ecommerce website</p>
-            </div>
+            </div></a>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box">
+            <a href="dropshipping.html"><div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Drop Shipping</a></h4>
+              <h4 class="title">Drop Shipping</a></h4>
                   <p class="description">Sell products from inventory that's not in your physical posession</p>
-                  </div>
+                </div></a>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
+            <a href="affiliate.html"><div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Affiliate Marketing</a></h4>
+              <h4 class="title">Affiliate Marketing</h4>
                 <p class="description">Earn commission from referring sales to internet services and products</p>
-              </div>
+              </div></a>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
+            <a href="cryptocurrency.html"><div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Crypto Currency</a></h4>
+              <h4 class="title">Crypto Currency</h4>
                   <p class="description">Participate in the new paradigm of programmable money. Welcome to the (r)evolution_</p>
-                </div>
+                </div></a>
           </div>
 
         </div>
@@ -220,7 +220,7 @@
             <p>
               If you would like to follow our lead, then we can show you a few paths on generating passive revenue streams, as well as starting business online and expanding your technical and marketing skillsets.
             </p>
-            <a href="#" class="btn-learn-more">Get Started</a>
+            <a href="#services" class="btn-learn-more scrollto">Get Started</a>
           </div>
         </div>
 
@@ -285,11 +285,11 @@
 
 
         <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="600">
-          <div class="icon-box">
+        <a href="youtube.html">  <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
-            <h4><a href="youtube.html">Make Money with Youtube </a></h4>
+            <h4>Make Money with Youtube </h4>
             <p></p>
-          </div>
+          </div></a>
         </div>
         </div>
 
