--- a/blogging.html
+++ b/blogging.html
@@ -39,19 +39,7 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top topbar-inner-pages">
-    <div class="container d-flex align-items-center">
-      <div class="contact-info mr-auto">
-        <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:hello@fkupayme">hello@fkupayme</a></li>
-        </ul>
-      </div>
-      <div class="cta">
-        <a href="#about" class="scrollto">Get Started</a>
-      </div>
-    </div>
-  </div>
+
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top header-inner-pages">
@@ -262,7 +250,7 @@
               <br>
 
                               <div class="post-item clearfix">
-                                <h4><a href="crm.html.html">CRM Software</a></h4>
+                                <h4><a href="crm.html">CRM Software</a></h4>
                               </div>
                               <div class="post-item clearfix">
                                 <h4><a href="emailmarketing.html">Email Marketing Software</a></h4>
