--- a/index.html
+++ b/index.html
@@ -39,19 +39,7 @@
 
 <body>
 
-  <!-- ======= Top Bar ======= -->
-  <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
-    <div class="container d-flex align-items-center">
-      <div class="contact-info mr-auto">
-        <ul>
-          <li><i class="icofont-envelope"></i><a href="mailto:hello@fkupayme">hello@fkupayme</a></li>
-        </ul>
-      </div>
-      <div class="cta">
-        <a href="#services" class="scrollto">Get Started</a>
-      </div>
-    </div>
-  </div>
+
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
@@ -149,7 +137,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Financial Kinetics Uncorporated</h2>
-                  <p class="animate__animated animate__fadeInUp">Here we will teach you how to become financially kinetic and uncorporated.  Participate in and profit from the billions of dollars that exchanges hands daily through internet services. <br><br> We threw up this site 10/11/2020, kind of jumping off the cliff and flying with this thing. We will be rapidly adding content, so hang tight! </p>
+                  <p class="animate__animated animate__fadeInUp">Here we will teach you how to become financially kinetic and uncorporated.  Participate in and profit from the billions of dollars that exchanges hands daily through internet services. </p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
