--- a/crm.html
+++ b/crm.html
@@ -216,12 +216,12 @@
 
                 <div class="post-item clearfix">
                   <img src="assets/img/blog-recent-5.jpg" alt="">
-                  <h4><a href="dropshipping.html">Guide to Affiliate Marketing</a></h4>
+                  <h4><a href="affiliate.html">Guide to Affiliate Marketing</a></h4>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/blog-recent-5.jpg" alt="">
-                  <h4><a href="dropshipping.html">Guide to Crypto Currency</a></h4>
+                  <h4><a href="cryptocurrency.html">Guide to Crypto Currency</a></h4>
                 </div>
 
                 <div class="post-item clearfix">
@@ -238,7 +238,6 @@
                   <img src="assets/img/blog-recent-3.jpg" alt="">
                   <h4><a href="youtube.html">Make Money on Youtube</a></h4>
                 </div>
-
 
               </div><!-- End sidebar recent posts-->
 
