--- a/youtube.html
+++ b/youtube.html
@@ -200,7 +200,7 @@
 
               <h3 class="sidebar-title">Make Money Online</h3>
               <div class="sidebar-item recent-posts">
-<br>
+  <br>
 
 
 
@@ -216,12 +216,12 @@
 
                 <div class="post-item clearfix">
                   <img src="assets/img/blog-recent-5.jpg" alt="">
-                  <h4><a href="dropshipping.html">Guide to Affiliate Marketing</a></h4>
+                  <h4><a href="affiliate.html">Guide to Affiliate Marketing</a></h4>
                 </div>
 
                 <div class="post-item clearfix">
                   <img src="assets/img/blog-recent-5.jpg" alt="">
-                  <h4><a href="dropshipping.html">Guide to Crypto Currency</a></h4>
+                  <h4><a href="cryptocurrency.html">Guide to Crypto Currency</a></h4>
                 </div>
 
                 <div class="post-item clearfix">
