--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <li><a href="affiliate.html">Guide to Affiliate Marketing</a></li>
 
-                <li><a href="cryptocurrency.html">Guide to cryptocurrency</a></li>
+                <li><a href="cryptocurrency.html">Guide to Crypto Currency</a></li>
               </ul>
             </li>
 
